<resources>
    <string name="app_name">Lexapp</string>
    <string name="btn_encode_label">Encode</string>
    <string name="btn_send_label">Send</string>
    <string name="btn_decode_label">Decode</string>
    <string name="menu_use_key_label">Add contact</string>
    <string name="menu_gen_key_label">Generate RSA</string>
    <string name="menu_contacts_label">Contacts</string>
    <string name="btn_reset_key_label">Reset Key</string>
    <string name="menu_choose_key_photo_label">Choose from gallery</string>
    <string name="menu_choose_key_scan_label">Scan with camera</string>
    <string name="menu_show_receiving_label">Show receiving key</string>
    <string name="btn_close_history_label">Close history</string>

    <string name="dialog_input_name">Input name</string>

    <string name="active_receiver_label">Active: $receiver$</string>

    <string name="msg_name_empty">Name can\'t be empty</string>
    <string name="msg_key_exists">Key already exists</string>
    <string name="msg_user_exists">User with this name already exists</string>
    <string name="msg_len_overflow">You can\'t encode more than %d symbols</string>
    <string name="msg_accept">Accept</string>
    <string name="msg_remove">Remove</string>
    <string name="msg_contacts_empty">Contacts list is empty</string>
    <string name="title_activity_share">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="menu_history_label">Show history</string>
</resources>