<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="50dp" android:layout_width="50dp">
    <item
        android:id="@+id/menu_add_key"
        android:orderInCategory="1"
        android:title="@string/menu_use_key_label" >
        <menu>
            <item
                android:id="@+id/menu_choose_key_photo"
                android:orderInCategory="1"
                android:title="@string/menu_choose_key_photo_label" />
            <item
                android:id="@+id/menu_choose_key_scan"
                android:orderInCategory="2"
                android:title="@string/menu_choose_key_scan_label" />
        </menu>
    </item>

    <item
        android:id="@+id/menu_choose_key"
        android:orderInCategory="2"
        android:title="@string/menu_contacts_label">
        <menu>

        </menu>
    </item>

    <item
        android:id="@+id/menu_show_receiving"
        android:orderInCategory="3"
        android:title="@string/menu_show_receiving_label" />

    <item
        android:id="@+id/menu_history"
        android:orderInCategory="4"
        android:title="@string/menu_history_label" />
</menu>